; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_memory.c_z80_md_ym2612_write.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/extr_memory.c_z80_md_ym2612_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PicoOpt = common dso_local global i32 0, align 4
@POPT_EN_FM = common dso_local global i32 0, align 4
@emustatus = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8)* @z80_md_ym2612_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @z80_md_ym2612_write(i32 %0, i8 zeroext %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  store i32 %0, i32* %3, align 4
  store i8 %1, i8* %4, align 1
  %5 = load i32, i32* @PicoOpt, align 4
  %6 = load i32, i32* @POPT_EN_FM, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %2
  %10 = load i32, i32* %3, align 4
  %11 = load i8, i8* %4, align 1
  %12 = call i32 @ym2612_write_local(i32 %10, i8 zeroext %11, i32 1)
  %13 = and i32 %12, 1
  %14 = load i32, i32* @emustatus, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* @emustatus, align 4
  br label %16

16:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32 @ym2612_write_local(i32, i8 zeroext, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
